--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,21 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="uni_padding">16dp</dimen>
+    <dimen name="half_padding">8dp</dimen>
+
+    <dimen name="half_margin">8dp</dimen>
+
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="nav_header_height_plus_margin">168dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="tool_bar_height">56dp</dimen>
+    <dimen name="tool_bar_height_no_padding">56dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_margin_second">32dp</dimen>
+    <dimen name="text_margin_third">48dp</dimen>
+    <dimen name="loading_size">56dp</dimen>
 </resources>
