--- a/app/src/main/res/layout/nav_main.xml
+++ b/app/src/main/res/layout/nav_main.xml
@@ -25,6 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        app:layoutManager="LinearLayoutManager"
+        android:orientation="vertical"
         tools:listitem="@layout/item_nav_menu">
 
     </android.support.v7.widget.RecyclerView>
