--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -11,6 +11,9 @@
         android:id="@+id/rv_collection"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="@dimen/half_padding"
+        android:paddingBottom="@dimen/half_padding"
         app:layoutManager="LinearLayoutManager"
         android:orientation="vertical"
         tools:listitem="@layout/item_collection"/>
