--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -4,29 +4,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-    android:layout_marginRight="@dimen/activity_horizontal_margin"
-    android:layout_marginTop="@dimen/half_margin"
-    android:layout_marginBottom="@dimen/half_margin"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:gravity="center"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     app:cardElevation="4dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="2dp"
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="false">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="145dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_cover"
+            <RelativeLayout
                 android:layout_width="105dp"
-                android:layout_height="145dp"
-                android:scaleType="centerCrop"
-                android:src="@color/colorPrimary"/>
+                android:layout_height="145dp">
+
+                <ImageView
+                    android:id="@+id/iv_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="30dp"
+                    android:background="@color/colorPrimary"
+                    app:srcCompat="@drawable/ic_gallery_white"/>
+                <ImageView
+                    android:id="@+id/iv_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"/>
+
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -84,6 +94,7 @@
                             android:id="@+id/rv_tags"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                             app:layoutManager="StaggeredGridLayoutManager"
                             android:orientation="horizontal"
                             app:spanCount="2"
