--- a/app/src/main/res/layout/item_picture_index.xml
+++ b/app/src/main/res/layout/item_picture_index.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/half_padding"
+    android:layout_margin="4dp"
     app:cardElevation="4dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="1dp"
@@ -12,7 +12,7 @@
     app:cardUseCompatPadding="false">
 
     <RelativeLayout
-        android:layout_width="224dp"
+        android:layout_width="100dp"
         android:layout_height="140dp"
         android:padding="4dp"
         android:background="@drawable/bg_cover">
@@ -21,9 +21,9 @@
             android:id="@+id/iv_icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="40dp"
-            android:background="@color/gray_60"
-            app:srcCompat="@drawable/ic_menu_gallery"/>
+            android:padding="30dp"
+            android:background="@color/thumbColor"
+            app:srcCompat="@drawable/ic_gallery_white"/>
         <ImageView
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
