--- a/app/src/main/res/layout/item_picture_index.xml
+++ b/app/src/main/res/layout/item_picture_index.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
     app:cardElevation="4dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="1dp"
