--- a/app/src/main/res/layout/nav_main.xml
+++ b/app/src/main/res/layout/nav_main.xml
@@ -21,7 +21,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_rule"
+        android:id="@+id/rv_site"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
