fix pl's shit with settings

--- a/app/src/main/res/layout/nav_main.xml
+++ b/app/src/main/res/layout/nav_main.xml
@@ -43,16 +43,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/uni_padding"
-        android:paddingRight="@dimen/uni_padding"
-        android:paddingTop="@dimen/half_padding"
-        android:paddingBottom="@dimen/half_padding"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/btn_setting"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/uni_padding"
+            android:paddingRight="@dimen/uni_padding"
+            android:paddingTop="@dimen/half_padding"
+            android:paddingBottom="@dimen/half_padding"
+            android:background="@drawable/bg_button"
             android:gravity="center_vertical">
 
             <ImageView
@@ -60,7 +61,7 @@
                 android:layout_height="32dp"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:scaleType="centerInside"
-                tools:src="@drawable/ic_exit_to_app_black" />
+                app:srcCompat="@drawable/ic_settings_black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -68,13 +69,18 @@
                 android:layout_marginLeft="@dimen/half_margin"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:text="设置 " />
+                android:text="设置" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/btn_exit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/uni_padding"
+            android:paddingRight="@dimen/uni_padding"
+            android:paddingTop="@dimen/half_padding"
+            android:paddingBottom="@dimen/half_padding"
+            android:background="@drawable/bg_button"
             android:gravity="center_vertical">
 
             <ImageView
@@ -82,7 +88,7 @@
                 android:layout_height="32dp"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:scaleType="centerInside"
-                tools:src="@drawable/ic_exit_to_app_black" />
+                app:srcCompat="@drawable/ic_exit_to_app_black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,7 +96,7 @@
                 android:layout_marginLeft="@dimen/half_margin"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:text="退出 " />
+                android:text="退出" />
         </LinearLayout>
 
     </LinearLayout>
