--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -18,9 +18,9 @@
             android:id="@+id/toolbar"
             android:layout_height="@dimen/tool_bar_height"
             android:layout_width="match_parent"
+            app:layout_collapseMode="pin"
             android:paddingLeft="-16dp"
             app:contentInsetStart="0dp"
-            app:layout_collapseMode="pin"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <LinearLayout
@@ -35,6 +35,12 @@
                     android:scaleType="fitXY"
                     android:padding="16dp"
                     android:background="@drawable/bg_button"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textAppearance="@style/ActionBar.Title"
+                    android:text="设置"/>
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
