--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="?attr/colorPrimaryDark">
+            app:contentScrim="?attr/colorPrimary">
 
             <ImageView
                 android:id="@+id/backdrop"
@@ -73,6 +73,7 @@
         app:borderWidth="0dp"
         app:fabSize="mini"
         app:rippleColor="@color/white_50"
+        app:backgroundTint="@color/colorAccent"
         android:src="@drawable/selector_search"/>
 
 </android.support.design.widget.CoordinatorLayout>
