add background image for MainActivity header

--- a/app/src/main/res/layout/activity_add_site.xml
+++ b/app/src/main/res/layout/activity_add_site.xml
@@ -59,6 +59,7 @@
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:met_baseColor="#0056d3"
                 android:hint="Basic"/>
         </LinearLayout>
 
