--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -130,21 +130,22 @@
             app:tabIcon2="@drawable/selector_description"
             />
 
-        <ml.puredark.hviewer.customs.ExViewPager
-            android:id="@+id/view_pager"
-            android:layout_below="@id/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:pagerCurrItem="0"
-            app:pagerLayout1="@layout/view_collection_index"
-            app:pagerLayout2="@layout/view_collection_desciption"/>
-
         <View
             android:id="@+id/shadowDown"
             android:layout_width="match_parent"
             android:layout_height="4dp"
             android:layout_below="@id/tab_layout"
             android:background="@drawable/shadow_bottom" />
+
+        <ml.puredark.hviewer.customs.ExViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:pagerCurrItem="0"
+            app:pagerLayout1="@layout/view_collection_index"
+            app:pagerLayout2="@layout/view_collection_desciption"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
